--- a/src/styles.css
+++ b/src/styles.css
@@ -6,12 +6,35 @@ body {
 main {
     display: block;
     position: fixed;
-    top: 0;
+    top: 58px;
     right: 0;
     bottom: 0;
     left: 0;
 }
 
 #map {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     height: 100%;
 }
+
+header {
+    
+    font-weight: bold;
+    border-bottom: 2px double black;
+}
+
+header div {
+    font-size: 0.8em;
+    font-weight: normal;
+}
+
+
+header {
+    padding: 12px;
+    background-color: rgba(223, 124, 190, 0.51);
+}
+
+
